--- a/LoginForm/style.css
+++ b/LoginForm/style.css
@@ -1,101 +1,113 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500;700&display=swap');
 *{
-    padding: 0;
+    padding: 0px;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 body{
     display: flex;
+    align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(143, 213, 213);
+}
+
+.loginform{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    width: 335px;
+    height: 87%;
+    border-radius: 10px;
+    padding: 2.5rem 1.5rem;
     align-items: center;
 }
 
-main{
-    height: 350px;
-    width: 300px;
-    background-color: black;
-    border-radius: 15px;
-    /* box-shadow: 0px 0px 5px 5px rgb(77, 69, 69) ; */
-    box-shadow: 0px 0px 20px 0px black;
-    padding: 20px;
-    text-align: center;
-    position: relative;
-    top: 150px;
+.loginform h1{
+    font-size: 1.5rem;
+    padding-bottom: 2rem;
 }
 
-main .form h1{
-    margin-bottom: 15px;
-    color: white;
-    font-size: 36px;
+.loginform .inputdata .imageandinput{
+    display: flex;
+    border-bottom: 1px solid black;
+    padding: 0.7rem 0rem;
+    margin-bottom: 0.5rem;
 }
 
-main .form form input{
-    text-align: center;
-    padding: 15px;
-    margin: 10px;
-    border-radius: 50px;
-    background-color: transparent;
-    color: white;
-    transition: all 2s ease-in-out;
+.loginform .inputdata .imageandinput input{
     outline: none;
-    cursor: pointer;
-    border: 2px solid cyan;
-    width: 15rem;
+    border: none;
+    font-size: 1rem;
+    font-weight: 300;
+    padding-left: 0.5rem;
 }
 
-input:focus{
-    width: 20rem;
-    animation-name: color-Change;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
+.loginform .inputdata a{
+    text-decoration: none;
+    color: black;
+    font-weight: 300;
+    font-size: 0.8rem;
+    display: flex;
+    justify-content: flex-end;
+    padding-bottom: 1rem;
 }
 
-@keyframes color-Change {
-    0%{
-        border-color: green;
-        color: green;
-    }
-
-    20%{
-        border-color: red;
-        color: red;
-    }
-
-    40%{
-        border-color: yellow;
-        color: yellow;
-    }
-
-    60%{
-        border-color: orange;
-        color: orange;
-    }
-
-    80%{
-        border-color: blueviolet;
-        color: blueviolet;
-    }
-
-    100%{
-        border-color: purple;
-        color: purple;
-    }
-}
-
-.form form .Submit{
-    padding: 15px 40px;
-    border-radius: 40px;
-    background-color: transparent;
+.loginform .loginbutton{
+    border: none;
+    width: 82%;
     color: white;
-    border: 2px solid green;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 20px;
-    text-decoration: underline;
-    transition: all 2s ease-in-out;
+    font-size: 0.8rem;
+    padding: 10px 0rem;
+    border-radius: 1rem;
+    margin-bottom: 3rem;
+    background: linear-gradient(to right, rgb(141, 104, 197), rgb(227, 68, 148));
 }
 
-.form form .Submit:hover{
-    background-color: green;
-    border: 2px solid green;
+.loginform span{
+    font-weight: 500;
+    font-size: 14px;
+    padding-bottom: 10px;
+}
+
+.loginform .socialmedia{
+    margin: 1rem 0 3rem 0;
+}
+
+.loginform .socialmedia a{
+    text-decoration: none;
+}
+
+.loginform .socialmedia .facebook{
+    background-color: darkblue;
+    border-radius: 50%;
+    padding: 0.5rem;
+    margin-right: 5px;
+}
+
+.loginform .socialmedia .twitter{
+    background-color: rgb(43, 71, 228);
+    border-radius: 50%;
+    padding: 0.5rem;
+    margin-right: 5px;
+}
+
+.loginform .socialmedia .google{
+    background-color: orangered;
+    border-radius: 50%;
+    padding: 0.5rem;
+}
+
+.loginform .sign{
+    border: none;
+    background: none;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.sign:hover {
+    color: rgb(141, 104, 197);
 }
